# Projet_long

./: .gitignore  README.md  pyproject.toml
data/: azurin_ca.ods  chymotrypsin.ent  chymotrypsin_ca.ods  plastocyanin_ca.ods  subtilisin_ca.ods
experiments/1_exp_qiskit/: first_clique.py  random_test.py  visual_test.py
experiments/2_exp_pennylane/: random_graph.py
experiments/3_exp_correspondance/: corres_graph.py
